src/main/java/grammar/generator/CMM_PARSER.java
/* CMM_PARSER.java */
/* Generated By:JJTree&JavaCC: Do not edit this line. CMM_PARSER.java */
package grammar.generator;
import java.io.*;

public class CMM_PARSER/*@bgen(jjtree)*/implements CMM_PARSERTreeConstants, CMM_PARSERConstants {/*@bgen(jjtree)*/
  protected static JJTCMM_PARSERState jjtree = new JJTCMM_PARSERState();
    public static void main(String[] args) throws ParseException{
        CMM_PARSER parser = new CMM_PARSER(System.in);
        parser.program();

    }

  static final public void program() throws ParseException {/*@bgen(jjtree) program */
  ASTprogram jjtn000 = new ASTprogram(JJTPROGRAM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      stmt_seq();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void stmt_seq() throws ParseException {/*@bgen(jjtree) stmt_seq */
  ASTstmt_seq jjtn000 = new ASTstmt_seq(JJTSTMT_SEQ);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_3(2147483647)) {
        jj_consume_token(ID);
        jj_consume_token(LS);
        if (jj_2_1(2)) {
          arg_stmt();
          jj_consume_token(RS);
          jj_consume_token(31);
          jj_consume_token(LB);
          fun_stmt();
          jj_consume_token(RB);
          stmt_seq1();
        } else if (jj_2_2(2)) {
          jj_consume_token(RS);
          jj_consume_token(31);
          jj_consume_token(LB);
          fun_stmt();
          jj_consume_token(RB);
          stmt_seq1();
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } else if (jj_2_4(2)) {
        arg_stmt();
        jj_consume_token(END);
        stmt_seq1();
      } else if (jj_2_5(2)) {
        ass_stmt();
        stmt_seq1();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void stmt_seq1() throws ParseException {/*@bgen(jjtree) stmt_seq1 */
  ASTstmt_seq1 jjtn000 = new ASTstmt_seq1(JJTSTMT_SEQ1);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_6(2)) {
        stmt_seq();
      } else {
        epsilon();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void arg_stmt() throws ParseException {/*@bgen(jjtree) arg_stmt */
  ASTarg_stmt jjtn000 = new ASTarg_stmt(JJTARG_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_7(2)) {
        jj_consume_token(ID);
        jj_consume_token(SEM);
        arg_stmt();
      } else if (jj_2_8(2)) {
        jj_consume_token(ID);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void fun_stmt() throws ParseException {/*@bgen(jjtree) fun_stmt */
  ASTfun_stmt jjtn000 = new ASTfun_stmt(JJTFUN_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_9(2)) {
        stmt();
        fun_stmt();
      } else {
        epsilon();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void stmt() throws ParseException {/*@bgen(jjtree) stmt */
  ASTstmt jjtn000 = new ASTstmt(JJTSTMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_10(2)) {
        if_stmt();
      } else if (jj_2_11(2)) {
        loop_stmt();
      } else if (jj_2_12(2)) {
        ass_stmt();
      } else if (jj_2_13(2)) {
        return_stmt();
      } else if (jj_2_14(2)) {
        call_stmt();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void call_stmt() throws ParseException {/*@bgen(jjtree) call_stmt */
  ASTcall_stmt jjtn000 = new ASTcall_stmt(JJTCALL_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ID);
      jj_consume_token(LS);
      if (jj_2_15(2)) {
        arg_stmt();
      } else {
        epsilon();
      }
      jj_consume_token(RS);
      jj_consume_token(END);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void if_stmt() throws ParseException {/*@bgen(jjtree) if_stmt */
    ASTif_stmt jjtn000 = new ASTif_stmt(JJTIF_STMT);
    boolean jjtc000 = true;
    jjtree.openNodeScope(jjtn000);System.out.println("if clause");
    try {
      jj_consume_token(IF);
      jj_consume_token(32);
      exp();
      jj_consume_token(LB);
      if (jj_2_16(2)) {
        stmt();
      } else {
        epsilon();
      }
      jj_consume_token(RB);
      if (jj_2_18(2)) {
        jj_consume_token(ELSE);
        jj_consume_token(LB);
        if (jj_2_17(2)) {
          stmt();
        } else {
          epsilon();
        }
        jj_consume_token(RB);
      } else {
        epsilon();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void ass_stmt() throws ParseException {/*@bgen(jjtree) ass_stmt */
  ASTass_stmt jjtn000 = new ASTass_stmt(JJTASS_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ID);
      jj_consume_token(ASS);
      exp();
      jj_consume_token(END);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void loop_stmt() throws ParseException {/*@bgen(jjtree) loop_stmt */
  ASTloop_stmt jjtn000 = new ASTloop_stmt(JJTLOOP_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WHILE);
      jj_consume_token(32);
      exp();
      jj_consume_token(LB);
      if (jj_2_19(2)) {
        stmt();
      } else {
        epsilon();
      }
      jj_consume_token(RB);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void return_stmt() throws ParseException {/*@bgen(jjtree) return_stmt */
  ASTreturn_stmt jjtn000 = new ASTreturn_stmt(JJTRETURN_STMT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(RETURN);
      exp();
      jj_consume_token(END);
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void exp() throws ParseException {/*@bgen(jjtree) exp */
  ASTexp jjtn000 = new ASTexp(JJTEXP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      simple_exp();
      if (jj_2_20(2)) {
        jj_consume_token(BL);
        simple_exp();
      } else if (jj_2_21(2)) {
        jj_consume_token(EQ);
        simple_exp();
      } else if (jj_2_22(2)) {
        jj_consume_token(AB);
        simple_exp();
      } else {
        epsilon();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void simple_exp() throws ParseException {/*@bgen(jjtree) simple_exp */
  ASTsimple_exp jjtn000 = new ASTsimple_exp(JJTSIMPLE_EXP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      term();
      simple_exp1();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void simple_exp1() throws ParseException {/*@bgen(jjtree) simple_exp1 */
  ASTsimple_exp1 jjtn000 = new ASTsimple_exp1(JJTSIMPLE_EXP1);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_23(2)) {
        jj_consume_token(SUB);
        term();
        simple_exp1();
      } else if (jj_2_24(2)) {
        jj_consume_token(ADD);
        term();
        simple_exp1();
      } else {
        epsilon();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void term() throws ParseException {/*@bgen(jjtree) term */
  ASTterm jjtn000 = new ASTterm(JJTTERM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      factor();
      term1();
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void term1() throws ParseException {/*@bgen(jjtree) term1 */
  ASTterm1 jjtn000 = new ASTterm1(JJTTERM1);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_25(2)) {
        jj_consume_token(DIV);
        factor();
        term1();
      } else if (jj_2_26(2)) {
        jj_consume_token(MUL);
        factor();
        term1();
      } else {
        epsilon();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void factor() throws ParseException {/*@bgen(jjtree) factor */
  ASTfactor jjtn000 = new ASTfactor(JJTFACTOR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_27(2)) {
        jj_consume_token(LS);
        exp();
        jj_consume_token(RS);
      } else if (jj_2_28(2)) {
        jj_consume_token(NUM);
      } else if (jj_2_29(2)) {
        jj_consume_token(ID);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
if (jjtc000) {
        jjtree.clearNodeScope(jjtn000);
        jjtc000 = false;
      } else {
        jjtree.popNode();
      }
      if (jjte000 instanceof RuntimeException) {
        {if (true) throw (RuntimeException)jjte000;}
      }
      if (jjte000 instanceof ParseException) {
        {if (true) throw (ParseException)jjte000;}
      }
      {if (true) throw (Error)jjte000;}
    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static final public void epsilon() throws ParseException {/*@bgen(jjtree) epsilon */
  ASTepsilon jjtn000 = new ASTepsilon(JJTEPSILON);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
jjtree.closeNodeScope(jjtn000, true);
      jjtc000 = false;

    } finally {
if (jjtc000) {
        jjtree.closeNodeScope(jjtn000, true);
      }
    }
}

  static private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  static private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  static private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  static private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  static private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  static private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  static private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  static private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  static private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_11()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }

  static private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_12()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(11, xla); }
  }

  static private boolean jj_2_13(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_13()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(12, xla); }
  }

  static private boolean jj_2_14(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_14()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(13, xla); }
  }

  static private boolean jj_2_15(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_15()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(14, xla); }
  }

  static private boolean jj_2_16(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_16()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(15, xla); }
  }

  static private boolean jj_2_17(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_17()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(16, xla); }
  }

  static private boolean jj_2_18(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_18()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(17, xla); }
  }

  static private boolean jj_2_19(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_19()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(18, xla); }
  }

  static private boolean jj_2_20(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_20()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(19, xla); }
  }

  static private boolean jj_2_21(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_21()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(20, xla); }
  }

  static private boolean jj_2_22(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_22()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(21, xla); }
  }

  static private boolean jj_2_23(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_23()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(22, xla); }
  }

  static private boolean jj_2_24(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_24()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(23, xla); }
  }

  static private boolean jj_2_25(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_25()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(24, xla); }
  }

  static private boolean jj_2_26(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_26()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(25, xla); }
  }

  static private boolean jj_2_27(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_27()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(26, xla); }
  }

  static private boolean jj_2_28(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_28()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(27, xla); }
  }

  static private boolean jj_2_29(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_29()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(28, xla); }
  }

  static private boolean jj_3R_term_181_5_10()
 {
    if (jj_3R_factor_195_5_11()) return true;
    return false;
  }

  static private boolean jj_3_5()
 {
    if (jj_3R_ass_stmt_139_5_2()) return true;
    return false;
  }

  static private boolean jj_3_4()
 {
    if (jj_3R_arg_stmt_99_5_1()) return true;
    if (jj_scan_token(END)) return true;
    return false;
  }

  static private boolean jj_3R_stmt_seq_82_5_13()
 {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(LS)) return true;
    return false;
  }

  static private boolean jj_3R_stmt_seq_82_5_3()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_stmt_seq_82_5_13()) {
    jj_scanpos = xsp;
    if (jj_3_4()) {
    jj_scanpos = xsp;
    if (jj_3_5()) return true;
    }
    }
    return false;
  }

  static private boolean jj_3_18()
 {
    if (jj_scan_token(ELSE)) return true;
    if (jj_scan_token(LB)) return true;
    return false;
  }

  static private boolean jj_3_24()
 {
    if (jj_scan_token(ADD)) return true;
    if (jj_3R_term_181_5_10()) return true;
    return false;
  }

  static private boolean jj_3_22()
 {
    if (jj_scan_token(AB)) return true;
    if (jj_3R_simple_exp_166_5_9()) return true;
    return false;
  }

  static private boolean jj_3_21()
 {
    if (jj_scan_token(EQ)) return true;
    if (jj_3R_simple_exp_166_5_9()) return true;
    return false;
  }

  static private boolean jj_3_23()
 {
    if (jj_scan_token(SUB)) return true;
    if (jj_3R_term_181_5_10()) return true;
    return false;
  }

  static private boolean jj_3_20()
 {
    if (jj_scan_token(BL)) return true;
    if (jj_3R_simple_exp_166_5_9()) return true;
    return false;
  }

  static private boolean jj_3_19()
 {
    if (jj_3R_stmt_113_5_4()) return true;
    return false;
  }

  static private boolean jj_3R_simple_exp_166_5_9()
 {
    if (jj_3R_term_181_5_10()) return true;
    return false;
  }

  static private boolean jj_3R_exp_157_5_12()
 {
    if (jj_3R_simple_exp_166_5_9()) return true;
    return false;
  }

  static private boolean jj_3_16()
 {
    if (jj_3R_stmt_113_5_4()) return true;
    return false;
  }

  static private boolean jj_3R_return_stmt_151_5_7()
 {
    if (jj_scan_token(RETURN)) return true;
    if (jj_3R_exp_157_5_12()) return true;
    return false;
  }

  static private boolean jj_3_2()
 {
    if (jj_scan_token(RS)) return true;
    if (jj_scan_token(31)) return true;
    return false;
  }

  static private boolean jj_3R_loop_stmt_145_5_6()
 {
    if (jj_scan_token(WHILE)) return true;
    if (jj_scan_token(32)) return true;
    return false;
  }

  static private boolean jj_3R_ass_stmt_139_5_2()
 {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(ASS)) return true;
    return false;
  }

  static private boolean jj_3_15()
 {
    if (jj_3R_arg_stmt_99_5_1()) return true;
    return false;
  }

  static private boolean jj_3R_if_stmt_133_5_5()
 {
    if (jj_scan_token(IF)) return true;
    if (jj_scan_token(32)) return true;
    return false;
  }

  static private boolean jj_3R_call_stmt_125_5_8()
 {
    if (jj_scan_token(ID)) return true;
    if (jj_scan_token(LS)) return true;
    return false;
  }

  static private boolean jj_3_14()
 {
    if (jj_3R_call_stmt_125_5_8()) return true;
    return false;
  }

  static private boolean jj_3_13()
 {
    if (jj_3R_return_stmt_151_5_7()) return true;
    return false;
  }

  static private boolean jj_3_12()
 {
    if (jj_3R_ass_stmt_139_5_2()) return true;
    return false;
  }

  static private boolean jj_3_11()
 {
    if (jj_3R_loop_stmt_145_5_6()) return true;
    return false;
  }

  static private boolean jj_3_10()
 {
    if (jj_3R_if_stmt_133_5_5()) return true;
    return false;
  }

  static private boolean jj_3R_stmt_113_5_4()
 {
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3_10()) {
    jj_scanpos = xsp;
    if (jj_3_11()) {
    jj_scanpos = xsp;
    if (jj_3_12()) {
    jj_scanpos = xsp;
    if (jj_3_13()) {
    jj_scanpos = xsp;
    if (jj_3_14()) return true;
    }
    }
    }
    }
    return false;
  }
